# port-manager

./: .gitignore  CHANGELOG.md  LICENSE  NEXT_FREE_PORT_ROADMAP.md  PROJECT_GROUPING_ROADMAP.md  PROJECT_MANIFESTS_ROADMAP.md  README.md  package.json
.github/workflows/: ci.yml
docs/: architecture.md  next-free-port-roadmap.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
