# Empty [workspace] detaches this crate from the parent workspace that lives in
# the main worktree (which is mid-refactor). Keeps the worktree self-contained.
[workspace]

[package]
name = "port-manager"
version = "1.0.0"
description = "A macOS port manager — scan, group, and kill open ports"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray", "notification", "notification-all", "clipboard-write-text"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
