# Empty [workspace] detaches this crate from the parent workspace that lives in
# the main worktree (which is mid-refactor). Keeps the worktree self-contained.
[workspace]

[package]
name = "port-manager"
version = "0.1.0"
description = "A native macOS app that scans, groups, and kills open ports without the terminal"
authors = ["Rajwinder Parmar <rparmar2003@outlook.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RajParmar2003/port-manager"
readme = "../README.md"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray", "notification", "notification-all", "clipboard-write-text"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
